feat: working chart analysis

--- a/app/src/main/res/layout/activity_expense_details_wallet.xml
+++ b/app/src/main/res/layout/activity_expense_details_wallet.xml
@@ -255,17 +255,13 @@
         android:fontFamily="@font/manrope_light"
         android:textStyle="bold"
         android:textAllCaps="false"
-        android:backgroundTint="@android:color/transparent"
-        android:insetTop="0dp"
-        android:insetBottom="0dp"
-        android:insetLeft="0dp"
-        android:insetRight="0dp"
-        android:minHeight="0dp"
-        android:minWidth="0dp"
-        android:elevation="0dp"
+        android:backgroundTint="@color/grey_light"
+        app:cornerRadius="12dp"
+        app:rippleColor="@color/grey_light"
         android:stateListAnimator="@null"
         android:paddingStart="12dp"
         android:paddingEnd="12dp"
+        android:paddingVertical="8dp"
         app:icon="@drawable/ic_remove"
         app:iconTint="@color/red_error"
         app:iconPadding="8dp"
