--- a/app/src/main/res/layout/activity_expense_analysis.xml
+++ b/app/src/main/res/layout/activity_expense_analysis.xml
@@ -165,7 +165,7 @@
         android:id="@+id/noDataText"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="No expenses in this category."
+        android:text="No data to show."
         android:textSize="14sp"
         android:textColor="@color/white"
         android:gravity="center"
