feat: loading indicators

--- a/app/src/main/res/layout/activity_expense_analysis.xml
+++ b/app/src/main/res/layout/activity_expense_analysis.xml
@@ -186,4 +186,20 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
+    <!-- PROGRESS INDICATOR -->
+    <com.google.android.material.progressindicator.CircularProgressIndicator
+        android:id="@+id/loadingProgressBar"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:indeterminate="true"
+        app:indicatorSize="48dp"
+        app:indicatorInset="0dp"
+        app:trackThickness="4dp"
+        app:indicatorColor="@color/orange"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:visibility="gone" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
