--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -193,6 +193,22 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
 
+        <!-- No data message -->
+        <TextView
+            android:id="@+id/noDataText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="No data to be shown"
+            android:textSize="16sp"
+            android:textColor="@color/white"
+            android:fontFamily="@font/manrope_bold"
+            android:visibility="gone"
+            app:layout_constraintTop_toBottomOf="@id/headerRow"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginTop="16dp" />
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/latestExpensesRecycler"
             android:layout_width="0dp"
