--- a/app/src/main/res/layout/activity_my_wallet.xml
+++ b/app/src/main/res/layout/activity_my_wallet.xml
@@ -116,13 +116,12 @@
         android:id="@+id/noDataText"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="No expenses to be shown."
+        android:text="No data to be shown."
         android:textSize="14sp"
         android:textColor="@color/white"
         android:gravity="center"
-        android:visibility="gone"
         android:padding="24dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:visibility="gone"
         app:layout_constraintTop_toBottomOf="@id/monthAndAnalysisLayout"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
