--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -193,33 +193,34 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
 
-        <!-- No data message -->
         <TextView
             android:id="@+id/noDataText"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="No data to be shown"
-            android:textSize="16sp"
-            android:textColor="@color/white"
-            android:fontFamily="@font/manrope_bold"
+            android:layout_marginTop="16dp"
+            android:padding="24dp"
+            android:gravity="center"
             android:visibility="gone"
-            app:layout_constraintTop_toBottomOf="@id/headerRow"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
+            android:text="No data to show."
+            android:textColor="@color/white"
+            android:textSize="14sp"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="16dp" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/headerRow" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/latestExpensesRecycler"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            android:layout_marginBottom="105dp"
             android:clipToPadding="false"
             android:paddingTop="4dp"
-            android:layout_marginBottom="105dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/headerRow" />
+            app:layout_constraintTop_toBottomOf="@id/headerRow"
+            app:layout_constraintVertical_bias="0.0" />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/addExpenseButton"
