--- a/app/src/main/res/layout/activity_create_group_expense.xml
+++ b/app/src/main/res/layout/activity_create_group_expense.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -14,6 +13,7 @@
         android:layout_height="match_parent"
         android:layout_margin="16dp">
 
+        <!-- Title -->
         <TextView
             android:id="@+id/createBudgetTitle"
             android:layout_width="wrap_content"
@@ -26,6 +26,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
+        <!-- Description -->
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/descriptionLayout"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
@@ -35,6 +36,10 @@
             app:boxBackgroundColor="@color/grey_dark"
             android:layout_marginTop="24dp"
             app:boxStrokeWidth="0dp"
+            app:boxCornerRadiusTopStart="12dp"
+            app:boxCornerRadiusTopEnd="12dp"
+            app:boxCornerRadiusBottomStart="12dp"
+            app:boxCornerRadiusBottomEnd="12dp"
             app:layout_constraintTop_toBottomOf="@id/createBudgetTitle"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent">
@@ -47,6 +52,7 @@
                 android:inputType="textCapSentences" />
         </com.google.android.material.textfield.TextInputLayout>
 
+        <!-- Amount -->
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/amountLayout"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
@@ -56,6 +62,10 @@
             android:hint="Amount"
             app:boxBackgroundColor="@color/grey_dark"
             app:boxStrokeWidth="0dp"
+            app:boxCornerRadiusTopStart="12dp"
+            app:boxCornerRadiusTopEnd="12dp"
+            app:boxCornerRadiusBottomStart="12dp"
+            app:boxCornerRadiusBottomEnd="12dp"
             app:layout_constraintTop_toBottomOf="@id/descriptionLayout"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent">
@@ -68,6 +78,38 @@
                 android:inputType="numberDecimal" />
         </com.google.android.material.textfield.TextInputLayout>
 
+        <!-- Date Picker -->
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/dateInputLayout"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
+            app:boxBackgroundColor="@color/grey_dark"
+            app:boxBackgroundMode="outline"
+            app:boxCornerRadiusTopStart="12dp"
+            app:boxCornerRadiusTopEnd="12dp"
+            app:boxCornerRadiusBottomStart="12dp"
+            app:boxCornerRadiusBottomEnd="12dp"
+            app:boxStrokeWidth="0dp"
+            app:endIconDrawable="@drawable/ic_calendar"
+            app:endIconMode="custom"
+            app:layout_constraintTop_toBottomOf="@id/amountLayout"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/dateInput"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:focusable="false"
+                android:clickable="true"
+                android:inputType="none"
+                android:textColor="@color/white"
+                android:paddingVertical="16dp"
+                android:fontFamily="@font/manrope_regular" />
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <!-- Members label -->
         <TextView
             android:id="@+id/membersLabel"
             android:layout_width="wrap_content"
@@ -76,9 +118,10 @@
             android:textColor="@color/grey_light"
             android:layout_marginTop="16dp"
             android:fontFamily="@font/manrope_bold"
-            app:layout_constraintTop_toBottomOf="@id/amountLayout"
+            app:layout_constraintTop_toBottomOf="@id/dateInputLayout"
             app:layout_constraintStart_toStartOf="parent" />
 
+        <!-- Members Recycler -->
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/membersRecycler"
             android:layout_width="0dp"
@@ -90,6 +133,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
 
+        <!-- Add to private wallet checkbox -->
         <CheckBox
             android:id="@+id/addToPrivateWalletCheckbox"
             android:layout_width="wrap_content"
@@ -100,6 +144,7 @@
             app:layout_constraintBottom_toTopOf="@id/saveExpenseBtn"
             app:layout_constraintStart_toStartOf="parent" />
 
+        <!-- Save button -->
         <com.google.android.material.button.MaterialButton
             android:id="@+id/saveExpenseBtn"
             android:layout_width="0dp"
