--- a/app/src/main/res/layout/item_budget_expense_row.xml
+++ b/app/src/main/res/layout/item_budget_expense_row.xml
@@ -1,31 +1,84 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:padding="8dp"
+    android:paddingHorizontal="16dp"
+    android:paddingVertical="12dp"
     android:layout_marginBottom="8dp"
     android:layout_marginHorizontal="8dp"
     android:background="@drawable/expense_bg">
 
+    <!-- Expense name -->
     <TextView
         android:id="@+id/expenseDescription"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:paddingBottom="6dp"
+        android:text="Expense Name"
         android:textColor="@color/white"
-        android:textSize="16sp" />
+        android:textSize="16sp"
+        android:fontFamily="@font/manrope_bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/expenseAmount"
+        android:ellipsize="end"
+        android:singleLine="true" />
 
+    <!-- Amount (right aligned, vertically centered) -->
     <TextView
         android:id="@+id/expenseAmount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="+120 PLN"
         android:textColor="@color/orange"
-        android:textSize="14sp" />
+        android:textSize="16sp"
+        android:fontFamily="@font/manrope_bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent" />
 
-    <TextView
-        android:id="@+id/expenseDate"
+    <!-- Meta info: User + "paid on" + Date in one horizontal line -->
+    <LinearLayout
+        android:id="@+id/metaContainer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="@color/grey_light"
-        android:textSize="12sp" />
-</LinearLayout>
+        android:orientation="horizontal"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/expenseDescription">
+
+        <TextView
+            android:id="@+id/expensePaidBy"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Martyna"
+            android:textStyle="bold"
+            android:textColor="@color/grey_light"
+            android:textSize="12sp"
+            android:fontFamily="@font/manrope_bold"
+            android:singleLine="true"
+            android:ellipsize="end" />
+
+        <TextView
+            android:id="@+id/paidOnLabel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text=" paid on "
+            android:textColor="@color/grey_light"
+            android:textSize="12sp"
+            android:fontFamily="@font/manrope_regular" />
+
+        <TextView
+            android:id="@+id/expenseDate"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="22 Jan 2025"
+            android:textStyle="bold"
+            android:textColor="@color/grey_light"
+            android:textSize="12sp"
+            android:fontFamily="@font/manrope_bold"
+            android:singleLine="true"
+            android:ellipsize="end" />
+    </LinearLayout>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
