--- a/app/src/main/res/layout/activity_create_group_expense.xml
+++ b/app/src/main/res/layout/activity_create_group_expense.xml
@@ -121,6 +121,17 @@
             app:layout_constraintTop_toBottomOf="@id/dateInputLayout"
             app:layout_constraintStart_toStartOf="parent" />
 
+        <!-- Select All Checkbox -->
+        <CheckBox
+            android:id="@+id/selectAllCheckbox"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Select All"
+            android:textColor="@color/white"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@id/membersLabel"
+            app:layout_constraintStart_toStartOf="parent" />
+
         <!-- Members Recycler -->
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/membersRecycler"
@@ -128,7 +139,7 @@
             android:layout_height="0dp"
             android:layout_marginTop="8dp"
             android:clipToPadding="false"
-            app:layout_constraintTop_toBottomOf="@id/membersLabel"
+            app:layout_constraintTop_toBottomOf="@id/selectAllCheckbox"
             app:layout_constraintBottom_toTopOf="@id/addToPrivateWalletCheckbox"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
