--- a/app/src/main/res/layout/activity_budget_details.xml
+++ b/app/src/main/res/layout/activity_budget_details.xml
@@ -6,7 +6,6 @@
     android:layout_height="match_parent"
     android:background="@color/grey">
 
-    <!-- AppBar with collapsing and pinned sections -->
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appBar"
         android:layout_width="match_parent"
@@ -14,7 +13,6 @@
         android:background="@color/grey"
         app:liftOnScroll="true">
 
-        <!-- Collapsible Section (Budget name + members) -->
         <com.google.android.material.appbar.CollapsingToolbarLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -27,7 +25,6 @@
                 android:orientation="vertical"
                 android:padding="16dp">
 
-                <!-- Budget Name + Balance -->
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
@@ -43,19 +40,37 @@
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
 
-                    <TextView
-                        android:id="@+id/userBalanceText"
+                    <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="+0 PLN"
-                        android:textColor="@color/white"
-                        android:textSize="16sp"
-                        android:fontFamily="@font/manrope_regular"
+                        android:orientation="horizontal"
+                        android:gravity="center_vertical"
                         app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintBaseline_toBaselineOf="@id/budgetNameText" />
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintBottom_toBottomOf="parent">
+
+                        <TextView
+                            android:id="@+id/userBalanceText"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="+0 PLN"
+                            android:textColor="@color/white"
+                            android:textSize="16sp"
+                            android:fontFamily="@font/manrope_regular"
+                            android:layout_marginEnd="8dp" />
+
+                        <ImageButton
+                            android:id="@+id/settingsBtn"
+                            android:layout_width="24dp"
+                            android:layout_height="24dp"
+                            android:background="?attr/selectableItemBackgroundBorderless"
+                            android:src="@drawable/ic_settings"
+                            android:contentDescription="settings"
+                            app:tint="@color/white" />
+                    </LinearLayout>
+
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
-                <!-- Members Recycler (fixed height) -->
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/membersRecycler"
                     android:layout_width="match_parent"
@@ -65,8 +80,6 @@
             </LinearLayout>
         </com.google.android.material.appbar.CollapsingToolbarLayout>
 
-        <!-- Pinned Section: Expenses Title + New Button -->
-        <!-- Pinned Section: Expenses Title + New Button -->
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -76,7 +89,6 @@
             android:paddingEnd="16dp"
             app:layout_collapseMode="pin">
 
-            <!-- Expenses Title (left-aligned) -->
             <TextView
                 android:id="@+id/expensesTitle"
                 android:layout_width="wrap_content"
@@ -90,7 +102,6 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintVertical_bias="0.5" />
 
-            <!-- New Button (right-aligned) -->
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/newExpenseBtn"
                 android:layout_width="wrap_content"
@@ -106,10 +117,8 @@
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-
     </com.google.android.material.appbar.AppBarLayout>
 
-    <!-- RecyclerView for expenses (scrollable) -->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/accordionRecycler"
         android:layout_width="match_parent"
