--- a/app/src/main/res/layout/activity_expense_details_wallet.xml
+++ b/app/src/main/res/layout/activity_expense_details_wallet.xml
@@ -34,6 +34,7 @@
             android:fontFamily="@font/manrope_bold"
             android:textColor="@color/orange"
             android:textSize="20sp"
+            android:text="placeholder"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
