feat: cosmetic updates

--- a/app/src/main/res/layout/activity_budget_details.xml
+++ b/app/src/main/res/layout/activity_budget_details.xml
@@ -53,7 +53,7 @@
                             android:id="@+id/userBalanceText"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="+0 PLN"
+                            android:text="+0 USD"
                             android:textColor="@color/white"
                             android:textSize="16sp"
                             android:fontFamily="@font/manrope_regular"
