--- a/app/src/main/res/layout/fragment_budgets.xml
+++ b/app/src/main/res/layout/fragment_budgets.xml
@@ -76,7 +76,7 @@
                         android:id="@+id/walletBalanceText"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="-13 PLN"
+                        android:text="-13"
                         android:textColor="#FF6666"
                         android:textSize="14sp"
                         android:fontFamily="@font/manrope_regular" />
