--- a/app/src/main/res/layout/item_budget_member_tile.xml
+++ b/app/src/main/res/layout/item_budget_member_tile.xml
@@ -39,7 +39,7 @@
         android:id="@+id/memberBalance"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="+0 PLN"
+        android:text="+0"
         android:textColor="@color/orange"
         android:textSize="14sp"
         android:fontFamily="@font/manrope_bold" />
