--- a/app/src/main/res/layout/item_budget_expense_row.xml
+++ b/app/src/main/res/layout/item_budget_expense_row.xml
@@ -30,7 +30,7 @@
         android:id="@+id/expenseAmount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="+120 PLN"
+        android:text="+120"
         android:textColor="@color/orange"
         android:textSize="16sp"
         android:fontFamily="@font/manrope_bold"
