chore: remove overall balance as it doesnt bring much value

--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -184,14 +184,15 @@
             android:layout_width="48dp"
             android:layout_height="48dp"
             android:indeterminate="true"
-            app:indicatorSize="48dp"
-            app:indicatorInset="0dp"
-            app:trackThickness="4dp"
             app:indicatorColor="@color/orange"
-            app:layout_constraintTop_toTopOf="parent"
+            app:indicatorInset="0dp"
+            app:indicatorSize="48dp"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.37"
+            app:trackThickness="4dp" />
 
         <TextView
             android:id="@+id/noDataText"
