feat: update decimal separator

--- a/app/src/main/res/layout/activity_budget_expense_details.xml
+++ b/app/src/main/res/layout/activity_budget_expense_details.xml
@@ -105,6 +105,7 @@
                     android:id="@+id/expenseAmountEdit"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:inputType="numberDecimal"
                     android:textColor="@android:color/white"
                     android:textSize="16sp"
                     android:visibility="gone"
